--- a/src/lib_requester/tezos-requester.opam
+++ b/src/lib_requester/tezos-requester.opam
@@ -13,6 +13,7 @@ depends: [
   "tezos-stdlib-unix"
   "lwt-watcher"
   "alcotest-lwt" { with-test & = "0.8.5" }
+  "tezos-test-services" { with-test }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
