Build/OPAM: Fix generation of protocol dune files

--- a/src/lib_protocol_compiler/dune
+++ b/src/lib_protocol_compiler/dune
@@ -103,7 +103,8 @@
  (section libexec)
  (files (replace.exe as replace)
         dune_protocol
-        dune_protocol.template))
+        dune_protocol.template
+        final_protocol_versions))
 
 (alias
  (name runtest_lint)
