--- a/src/proto_demo_counter/lib_protocol/tezos-protocol-demo-counter.opam
+++ b/src/proto_demo_counter/lib_protocol/tezos-protocol-demo-counter.opam
@@ -13,7 +13,9 @@ depends: [
 build: [
   [ "%{tezos-protocol-compiler:lib}%/replace"
       "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
-      "dune" "demo_counter" ]
+      "dune"
+      "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
+      "demo_counter" ]
   [ "dune" "build" "-p" name "-j" jobs ]
 ]
 run-test: [
