--- a/src/proto_demo_noops/lib_protocol/tezos-protocol-demo-noops.opam
+++ b/src/proto_demo_noops/lib_protocol/tezos-protocol-demo-noops.opam
@@ -15,6 +15,7 @@ build: [
     "%{tezos-protocol-compiler:lib}%/replace"
     "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
     "dune"
+    "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
     "demo_noops"
   ]
   ["dune" "build" "-p" name "-j" jobs]
