--- a/src/proto_000_Ps9mPmXa/lib_protocol/tezos-protocol-000-Ps9mPmXa.opam
+++ b/src/proto_000_Ps9mPmXa/lib_protocol/tezos-protocol-000-Ps9mPmXa.opam
@@ -14,6 +14,7 @@ build: [
     "%{tezos-protocol-compiler:lib}%/replace"
     "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
     "dune"
+    "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
     "000_Ps9mPmXa"
   ]
   ["dune" "build" "-p" name "-j" jobs]
