--- a/src/proto_002_PsYLVpVv/lib_protocol/tezos-embedded-protocol-002-PsYLVpVv.opam
+++ b/src/proto_002_PsYLVpVv/lib_protocol/tezos-embedded-protocol-002-PsYLVpVv.opam
@@ -17,6 +17,7 @@ build: [
     "%{tezos-protocol-compiler:lib}%/replace"
     "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
     "dune"
+    "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
     "002_PsYLVpVv"
   ]
   ["dune" "build" "-p" name "-j" jobs]
