--- a/src/proto_003_PsddFKi3/lib_protocol/tezos-protocol-003-PsddFKi3.opam
+++ b/src/proto_003_PsddFKi3/lib_protocol/tezos-protocol-003-PsddFKi3.opam
@@ -19,6 +19,7 @@ build: [
     "%{tezos-protocol-compiler:lib}%/replace"
     "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
     "dune"
+    "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
     "003_PsddFKi3"
   ]
   ["dune" "build" "-p" name "-j" jobs]
