--- a/src/proto_004_Pt24m4xi/lib_protocol/tezos-protocol-004-Pt24m4xi.opam
+++ b/src/proto_004_Pt24m4xi/lib_protocol/tezos-protocol-004-Pt24m4xi.opam
@@ -16,6 +16,7 @@ build: [
     "%{tezos-protocol-compiler:lib}%/replace"
     "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
     "dune"
+    "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
     "004_Pt24m4xi"
   ]
   ["dune" "build" "-p" name "-j" jobs]
