--- a/src/proto_005_PsBABY5H/lib_protocol/tezos-protocol-005-PsBABY5H.opam
+++ b/src/proto_005_PsBABY5H/lib_protocol/tezos-protocol-005-PsBABY5H.opam
@@ -16,6 +16,7 @@ build: [
     "%{tezos-protocol-compiler:lib}%/replace"
     "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
     "dune"
+    "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
     "005_PsBABY5H"
   ]
   ["dune" "build" "-p" name "-j" jobs]
