--- a/src/proto_006_PsCARTHA/lib_protocol/tezos-protocol-006-PsCARTHA-tests.opam
+++ b/src/proto_006_PsCARTHA/lib_protocol/tezos-protocol-006-PsCARTHA-tests.opam
@@ -23,6 +23,7 @@ build: [
     "%{tezos-protocol-compiler:lib}%/replace"
     "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
     "dune"
+    "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
     "006_PsCARTHA"
   ]
   ["dune" "build" "-p" name "-j" jobs]
