--- a/src/proto_alpha/lib_protocol/tezos-protocol-alpha.opam
+++ b/src/proto_alpha/lib_protocol/tezos-protocol-alpha.opam
@@ -16,6 +16,7 @@ build: [
     "%{tezos-protocol-compiler:lib}%/replace"
     "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
     "dune"
+    "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
     "alpha"
   ]
   ["dune" "build" "-p" name "-j" jobs]
