--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 
 variables:
   ## Please update `scripts/version.sh` accordingly
-  build_deps_image_version: d0c437853544d0fa15fb152224a734204c92cc5c
+  build_deps_image_version: 0c374d7d54f4c4dcb39ae94f67b7fb6fb6f9eea6
   build_deps_image_name: registry.gitlab.com/tezos/opam-repository
   public_docker_image_name: docker.io/${CI_PROJECT_PATH}
   GIT_STRATEGY: fetch
@@ -275,6 +275,11 @@ unit:src/tooling:
   <<: *test_definition
   script:
     - dune build @src/tooling/runtest
+
+unit:ocaml-bls12-381:
+  <<: *test_definition
+  script:
+    - dune build @vendors/ocaml-bls12-381/runtest
 
 unit:ocaml-ledger-wallet:
   <<: *test_definition
@@ -734,6 +739,11 @@ documentation:linkcheck:
 
 ##BEGIN_OPAM##
 # this section is updated using the script scripts/update_opam_test.sh
+
+opam:bls12-381:
+  <<: *opam_definition
+  variables:
+    package: bls12-381
 
 opam:flextesa:
   <<: *opam_definition
