Client/mockup: print back custom protocol consts
Co-authored-by: Richard.Bonichon <richard.bonichon@tweag.io>

--- a/src/lib_mockup/dune
+++ b/src/lib_mockup/dune
@@ -4,6 +4,7 @@
  (modules registration)
  (libraries
    tezos-base
+   tezos-client-base
    tezos-shell-services
    tezos-protocol-environment)
  (flags (:standard -open Tezos_base__TzPervasives)))
