Stdlib, etc.: use external Ringo instead of LRU/Ring/WeakRingTable

--- a/src/lib_p2p/dune
+++ b/src/lib_p2p/dune
@@ -3,6 +3,7 @@
  (public_name tezos-p2p)
  (libraries lwt-watcher
             lwt-canceler
+            ringo
             tezos-base
             tezos-stdlib
             tezos-stdlib-unix
