--- a/src/lib_p2p/tezos-p2p.opam
+++ b/src/lib_p2p/tezos-p2p.opam
@@ -15,6 +15,7 @@ depends: [
   "lwt"
   "lwt-watcher" { = "0.1" }
   "lwt-canceler" { = "0.2" }
+  "ringo" { = "0.4" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
