--- a/src/lib_workers/tezos-workers.opam
+++ b/src/lib_workers/tezos-workers.opam
@@ -11,6 +11,7 @@ depends: [
   "dune" { >= "1.11" }
   "tezos-base"
   "tezos-stdlib-unix"
+  "ringo" { = "0.4" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
