--- a/src/lib_version/dune
+++ b/src/lib_version/dune
@@ -1,6 +1,8 @@
 (library
  (name tezos_version)
- (public_name tezos-version))
+ (public_name tezos-version)
+ (libraries tezos-base)
+ (flags (:standard -open Tezos_base__TzPervasives)))
 
 (rule
  (targets generated_git_info.ml)
