Mockup: open parameters in dune to help script/activate_protocol.sh

--- a/src/proto_alpha/lib_client/dune
+++ b/src/proto_alpha/lib_client/dune
@@ -14,6 +14,7 @@
                    -open Tezos_shell_services
                    -open Tezos_client_base
                    -open Tezos_protocol_alpha
+                   -open Tezos_protocol_alpha_parameters
                    -open Tezos_rpc)))
 
 (alias
