tezos_python: Add a wrapper around `tezos-codec`
We add a wrapper around `tezos-codec` similarly to `tezos-client`.

--- a/tests_python/Makefile
+++ b/tests_python/Makefile
@@ -1,7 +1,7 @@
 TYPECHECK=mypy
 LINT=pylint
 LINT2=pycodestyle
-PACKAGES=daemons launchers client tools scripts tests examples tests/multibranch
+PACKAGES=daemons launchers client tools scripts tests examples tests/multibranch codec
 LOG_DIR=tmp
 
 fast:
