Test/Protocol: test script_interpreter errors and STEPS_TO_QUOTA
This commits adds a set of tests that tests that script_interpreter
error encoding-decoding is idempotent, that the interpreter returns
Bad_contract_parameter when executed with ill-typed
parameter. Finally, it asserts the behavior of STEPS_TO_QUOTA in the
absence of metering.

--- a/src/proto_alpha/lib_protocol/test/dune
+++ b/src/proto_alpha/lib_protocol/test/dune
@@ -6,13 +6,14 @@
             alcotest-lwt
             tezos-alpha-test-helpers
             tezos-stdlib-unix
-	    tezos-client-base
-            tezos-protocol-alpha-parameters)
+            tezos-client-base
+            tezos-protocol-alpha-parameters
+            tezos-test-services)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_micheline
                    -open Tezos_protocol_alpha
                    -open Tezos_alpha_test_helpers
-                   )))
+                   -open Tezos_test_services)))
 
 (alias
  (name buildtest)
