--- a/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
+++ b/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
@@ -14,6 +14,7 @@ depends: [
   "tezos-alpha-test-helpers" { with-test }
   "tezos-stdlib-unix" { with-test }
   "tezos-protocol-environment" { with-test }
+  "tezos-test-services" { with-test }
   "tezos-client-base" { with-test }
   "tezos-protocol-alpha-parameters" { with-test }
   "tezos-shell-services" { with-test }
