--- a/src/tooling/tezos-tooling.opam
+++ b/src/tooling/tezos-tooling.opam
@@ -8,6 +8,7 @@ license: "MIT"
 depends: [
   "dune" { >= "1.11" }
   "ocamlformat" { = "0.10" }
+  "bisect_ppx" { >= "2.3" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
