Opam: fix tezos-version dependencies

--- a/src/lib_shell_services/tezos-shell-services.opam
+++ b/src/lib_shell_services/tezos-shell-services.opam
@@ -11,6 +11,7 @@ depends: [
   "tezos-base"
   "tezos-workers"
   "tezos-p2p-services"
+  "tezos-version"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
