--- a/src/lib_version/tezos-version.opam
+++ b/src/lib_version/tezos-version.opam
@@ -7,6 +7,7 @@ dev-repo: "git+https://gitlab.com/tezos/tezos.git"
 license: "MIT"
 depends: [
   "dune" { >= "1.11" }
+  "tezos-base"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
