Tests: port to the Alcotest 1.0+ API

--- a/src/lib_p2p/tezos-p2p.opam
+++ b/src/lib_p2p/tezos-p2p.opam
@@ -11,7 +11,7 @@ depends: [
   "tezos-base"
   "tezos-stdlib-unix"
   "tezos-p2p-services"
-  "alcotest-lwt" { with-test & = "0.8.5" }
+  "alcotest-lwt" { with-test & >= "1.1.0" }
   "lwt" { < "4.3" }
   "lwt-watcher" { = "0.1" }
   "lwt-canceler" { = "0.2" }
