--- a/src/lib_signer_backends/tezos-signer-backends.opam
+++ b/src/lib_signer_backends/tezos-signer-backends.opam
@@ -15,8 +15,8 @@ depends: [
   "tezos-signer-services"
   "tezos-shell-services"
   "ledgerwallet-tezos"
-  "alcotest" {with-test & = "0.8.5"}
-  "alcotest-lwt" {with-test & = "0.8.5"}
+  "alcotest" {with-test & >= "1.1.0"}
+  "alcotest-lwt" {with-test & >= "1.1.0"}
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
