--- a/src/lib_micheline/tezos-micheline.opam
+++ b/src/lib_micheline/tezos-micheline.opam
@@ -11,7 +11,7 @@ depends: [
   "data-encoding" { = "0.2" }
   "tezos-error-monad"
   "uutf"
-  "alcotest-lwt" { with-test & = "0.8.5" }
+  "alcotest-lwt" { with-test & >= "1.1.0" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
