--- a/src/lib_stdlib/tezos-stdlib.opam
+++ b/src/lib_stdlib/tezos-stdlib.opam
@@ -14,7 +14,7 @@ depends: [
   "ppx_inline_test"
   "bigstring" { with-test }
   "lwt_log" { with-test }
-  "alcotest" { with-test & = "0.8.5" }
+  "alcotest" { with-test & >= "1.1.0" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
