--- a/src/proto_005_PsBabyM1/lib_client/tezos-client-005-PsBabyM1.opam
+++ b/src/proto_005_PsBabyM1/lib_client/tezos-client-005-PsBabyM1.opam
@@ -13,7 +13,7 @@ depends: [
   "tezos-protocol-005-PsBabyM1"
   "tezos-shell-services"
   "tezos-signer-backends"
-  "alcotest-lwt" { with-test & = "0.8.5" }
+  "alcotest-lwt" { with-test & >= "1.1.0" }
 ]
 build: [
   [ "dune" "build" "-p" name "-j" jobs ]
