CI: harmonize linting targets between CI and Makefile
Previously, OCaml code was also verified in check_python_linting.
Also, check_linting was not executing dune build @runtest-lint

Harmonising the Makefile and the CI targets help local development

Signed-off-by: Danny Willems <be.danny.willems@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,14 +52,12 @@ check_opam_lint:
 check_linting:
   <<: *build_definition
   script:
-    - src/tooling/lint.sh check.ci
-    - src/tooling/lint.sh check_scripts
-    - src/tooling/lint.sh check.ocamlformat
+    - make check-linting
 
 check_python_linting:
   <<: *build_definition
   script:
-    - make test-lint
+    - make check-python-linting
 
 check_python_types:
   <<: *build_definition
