--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -416,6 +416,12 @@ integration:injection:
     - pytest tests_python/tests/test_injection.py -s --log-dir=tmp
   stage: test
 
+integration:keccak:
+  <<: *integration_python_definition
+  script:
+    - pytest tests_python/tests/test_keccak.py -s --log-dir=tmp
+  stage: test
+
 integration:many_bakers:
   <<: *integration_python_definition
   script:
@@ -492,6 +498,12 @@ integration:rpc:
   <<: *integration_python_definition
   script:
     - pytest tests_python/tests/test_rpc.py -s --log-dir=tmp
+  stage: test
+
+integration:sha3:
+  <<: *integration_python_definition
+  script:
+    - pytest tests_python/tests/test_sha3.py -s --log-dir=tmp
   stage: test
 
 integration:tls:
