--- a/src/lib_shell_services/dune
+++ b/src/lib_shell_services/dune
@@ -2,12 +2,11 @@
  (name tezos_shell_services)
  (public_name tezos-shell-services)
  (libraries tezos-base
-            tezos-workers
 	    tezos-p2p-services
 	    tezos-version)
  (flags (:standard -linkall
-                   -open Tezos_base__TzPervasives
-                   -open Tezos_workers
+       -open Tezos_base__TzPervasives
+       -open Tezos_base
 		   -open Tezos_p2p_services
 		   -open Tezos_version)))
 
