--- a/src/lib_workers/dune
+++ b/src/lib_workers/dune
@@ -4,6 +4,7 @@
  (libraries tezos-base
             tezos-stdlib-unix)
  (flags (:standard -open Tezos_base__TzPervasives
+                   -open Tezos_base
                    -open Tezos_stdlib_unix
 )))
 
