Lib_crypto: Rewrite to use hacl-star opam package
HACLv2 includes an implementation of Blake2b.
There is also a slight simplification of the API wrt to NaCl:
- there is no longer need to pad buffers with zeros
- thus, there are no more boxzerobytes and zerobytes
- there is now a single tagbytes for the in-place functions

--- a/src/lib_crypto/dune
+++ b/src/lib_crypto/dune
@@ -10,8 +10,7 @@
             tezos-error-monad
             tezos-rpc
             lwt
-            blake2
-            hacl
+            hacl-star
             secp256k1-internal
             uecc
             zarith))
