--- a/src/lib_crypto/test/dune
+++ b/src/lib_crypto/test/dune
@@ -1,5 +1,6 @@
 (executables
- (names test_merkle
+ (names test_hacl
+        test_merkle
         test_base58
         test_ed25519
         test_blake2b
@@ -16,13 +17,18 @@
 
 (alias
  (name buildtest)
- (deps test_merkle.exe
+ (deps test_hacl.exe
+       test_merkle.exe
        test_base58.exe
        test_ed25519.exe
        test_blake2b.exe
        test_pvss.exe
        test_crypto_box.exe
        test_deterministic_nonce.exe))
+
+(alias
+ (name runtest_hacl)
+ (action (run %{exe:test_hacl.exe})))
 
 (alias
  (name runtest_merkle)
@@ -55,7 +61,8 @@
 (alias
  (name runtest)
  (package tezos-crypto)
- (deps (alias runtest_merkle)
+ (deps (alias runtest_hacl)
+       (alias runtest_merkle)
        (alias runtest_base58)
        (alias runtest_ed25519)
        (alias runtest_blake2b)
