Protocol_environment: introduce structs/ (to go along sigs/)
For now, only add `structs/v0/mBytes.ml`. This is a legacy module that
will be removed from the non-protocol-environment code in the next
commit.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -990,6 +990,11 @@ opam:tezos-protocol-environment-sigs:
   variables:
     package: tezos-protocol-environment-sigs
 
+opam:tezos-protocol-environment-structs:
+  <<: *opam_definition
+  variables:
+    package: tezos-protocol-environment-structs
+
 opam:tezos-protocol-genesis:
   <<: *opam_definition
   variables:
