--- a/src/lib_lwt_result_stdlib/tezos-lwt-result-stdlib.opam
+++ b/src/lib_lwt_result_stdlib/tezos-lwt-result-stdlib.opam
@@ -11,6 +11,7 @@ depends: [
   "ocaml" { >= "4.07" }
   "tezos-error-monad"
   "lwt"
+  "alcotest-lwt" { with-test & >= "1.1.0" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
