Error_monad: remove Error_table, use Lwtreslib.Hashtbl.S_LWT instead

--- a/src/lib_crypto/dune
+++ b/src/lib_crypto/dune
@@ -8,6 +8,7 @@
  (libraries tezos-stdlib
             data-encoding
             tezos-error-monad
+            tezos-lwt-result-stdlib
             tezos-rpc
             lwt
             hacl-star
