--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,25 +103,55 @@ build:
 
 # this section is updated using the script scripts/update_unit_test.sh
 ##BEGIN_UNITEST##
+unit:signer_backends/unix:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_signer_backends/unix/runtest
+
+unit:signer_backends:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_signer_backends/runtest
+
+unit:crypto:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_crypto/runtest
+
+unit:protocol_environment:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_protocol_environment/runtest
+
+unit:stdlib:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_stdlib/runtest
+
 unit:shell:
   <<: *test_definition
   script:
     - dune build @src/lib_shell/runtest
 
-unit:client_base:
+unit:src/bin_client:
   <<: *test_definition
   script:
-    - dune build @src/lib_client_base/runtest
-
-unit:requester:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_requester/runtest
+    - dune build @src/bin_client/runtest
 
 unit:error_monad:
   <<: *test_definition
   script:
     - dune build @src/lib_error_monad/runtest
+
+unit:micheline:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_micheline/runtest
+
+unit:storage:
+  <<: *test_definition
+  script:
+    - dune build @src/lib_storage/runtest
 
 unit:src/proto_006_PsCARTHA/lib_client:
   <<: *test_definition
@@ -143,65 +173,40 @@ unit:src/proto_alpha/lib_protocol:
   script:
     - dune build @src/proto_alpha/lib_protocol/runtest
 
-unit:crypto:
+unit:lwt_result_stdlib:
   <<: *test_definition
   script:
-    - dune build @src/lib_crypto/runtest
+    - dune build @src/lib_lwt_result_stdlib/runtest
 
-unit:stdlib:
+unit:client_base:
   <<: *test_definition
   script:
-    - dune build @src/lib_stdlib/runtest
+    - dune build @src/lib_client_base/runtest
 
-unit:storage:
+unit:requester:
   <<: *test_definition
   script:
-    - dune build @src/lib_storage/runtest
+    - dune build @src/lib_requester/runtest
 
 unit:p2p:
   <<: *test_definition
   script:
     - dune build @src/lib_p2p/runtest
 
-unit:micheline:
+unit:ocaml-lmdb:
   <<: *test_definition
   script:
-    - dune build @src/lib_micheline/runtest
-
-unit:protocol_environment:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_protocol_environment/runtest
-
-unit:signer_backends/unix:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_signer_backends/unix/runtest
-
-unit:signer_backends:
-  <<: *test_definition
-  script:
-    - dune build @src/lib_signer_backends/runtest
-
-unit:src/bin_client:
-  <<: *test_definition
-  script:
-    - dune build @src/bin_client/runtest
-
-unit:ocaml-uecc:
-  <<: *test_definition
-  script:
-    - dune build @vendors/ocaml-uecc/runtest
+    - dune build @vendors/ocaml-lmdb/runtest
 
 unit:ocaml-ledger-wallet:
   <<: *test_definition
   script:
     - dune build @vendors/ocaml-ledger-wallet/runtest
 
-unit:ocaml-lmdb:
+unit:ocaml-uecc:
   <<: *test_definition
   script:
-    - dune build @vendors/ocaml-lmdb/runtest
+    - dune build @vendors/ocaml-uecc/runtest
 
 
 ##END_UNITEST##
