--- a/src/lib_crypto/tezos-crypto.opam
+++ b/src/lib_crypto/tezos-crypto.opam
@@ -18,6 +18,7 @@ depends: [
   "zarith"
   "secp256k1-internal"
   "uecc"
+  "conf-rust" # fake (for the CI) to be removed once libsapling is merged
   "alcotest" { with-test & >= "1.1.0" }
 ]
 conflicts: [
