--- a/src/proto_alpha/lib_protocol/test/dune
+++ b/src/proto_alpha/lib_protocol/test/dune
@@ -11,14 +11,16 @@
             tezos-protocol-alpha-parameters
             tezos-test-services
             tezos-sapling
-            astring)
+            astring
+            tezos-client-alpha)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_micheline
                    -open Tezos_client_alpha
                    -open Tezos_protocol_alpha
                    -open Tezos_protocol_environment_alpha
                    -open Tezos_alpha_test_helpers
-                   -open Tezos_test_services)))
+                   -open Tezos_test_services
+                   -open Tezos_client_alpha)))
 
 (rule
  (alias buildtest)
