--- a/src/proto_alpha/lib_protocol/test/dune
+++ b/src/proto_alpha/lib_protocol/test/dune
@@ -8,14 +8,16 @@
             tezos-stdlib-unix
             tezos-client-base
             tezos-protocol-alpha-parameters
-            tezos-test-services)
+            tezos-test-services
+            tezos-client-alpha)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_micheline
                    -open Tezos_client_alpha
                    -open Tezos_protocol_alpha
                    -open Tezos_protocol_environment_alpha
                    -open Tezos_alpha_test_helpers
-                   -open Tezos_test_services)))
+                   -open Tezos_test_services
+                   -open Tezos_client_alpha)))
 
 (alias
  (name buildtest)
