Protocol_environment: factorise sigs/structs packers

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -985,6 +985,11 @@ opam:tezos-protocol-environment:
   variables:
     package: tezos-protocol-environment
 
+opam:tezos-protocol-environment-packer:
+  <<: *opam_definition
+  variables:
+    package: tezos-protocol-environment-packer
+
 opam:tezos-protocol-environment-sigs:
   <<: *opam_definition
   variables:
