Protocol environment: fix dependencies in sigs/structs opam and dune

--- a/src/lib_protocol_environment/s_packer/dune
+++ b/src/lib_protocol_environment/s_packer/dune
@@ -1,7 +1,15 @@
-(executable
- (name s_packer)
+(library
+ (name tezos_protocol_environment_packer)
  (public_name tezos-protocol-environment-packer)
- (package tezos-protocol-environment-packer))
+ (modules))
+
+(executable
+ (name s_packer))
+
+(install
+  (section libexec)
+  (package tezos-protocol-environment-packer)
+  (files (s_packer.exe as s_packer)))
 
 (alias
  (name runtest_lint)
