--- a/src/lib_protocol_environment/tezos-protocol-environment-structs.opam
+++ b/src/lib_protocol_environment/tezos-protocol-environment-structs.opam
@@ -8,7 +8,8 @@ license: "MIT"
 depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "1.11" }
-  "tezos-stdlib" { with-test }
+  "tezos-stdlib"
+  "tezos-protocol-environment-packer"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
