--- a/src/lib_protocol_environment/tezos-protocol-environment.opam
+++ b/src/lib_protocol_environment/tezos-protocol-environment.opam
@@ -10,6 +10,7 @@ depends: [
   "dune" { >= "1.11" }
   "tezos-base"
   "tezos-protocol-environment-sigs"
+  "tezos-protocol-environment-structs"
   "alcotest-lwt" { with-test & >= "1.1.0" }
 ]
 build: [
